k8s/ingress.yaml
# sonsaekim Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonsaekim-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: auth-service
      port:
        number: 80
  rules:
  - http:
      paths:
      - path: /learn/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: learning-service
            port:
              number: 80
      - path: /quiz/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: learning-service
            port:
              number: 80
      - path: /game/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: learning-service
            port:
              number: 80
      - path: /imitate/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: learning-service
            port:
              number: 80
      - path: /contents/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: learning-service
            port:
              number: 80
      - path: /api/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: learning-service
            port:
              number: 80
